# TNM-Classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: baseline.ipynb  baseline_multiclass.ipynb  multilabel.ipynb
src/: dataset.py  main.py  model.py  train.py  utils.py
