[tool.poetry]
name = "ntcir17"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
ipykernel = "^6.22.0"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
polars = "^0.17.9"
transformers = "^4.29.1"
wordcloud = "^1.9.1.1"
urllib3 = "<2.0"
ipywidgets = "^8.0.6"
fugashi = {extras = ["unidic-lite"], version = "^1.2.1"}
mecab-python3 = "^1.0.6"
rhoknp = "^1.3.0"
ipadic = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
